--- a/README
+++ b/README
@@ -8,4 +8,4 @@ https://nl.wikipedia.org/wiki/Zorgverzekering_(Nederland)
 # participatiewet
 https://nl.wikipedia.org/wiki/Participatiewet
 
-bemoeigurus at work
+bemoeigurus at work © 2002-2021
