--- a/README
+++ b/README
@@ -8,4 +8,10 @@ https://nl.wikipedia.org/wiki/Zorgverzekering_(Nederland)
 # participatiewet
 https://nl.wikipedia.org/wiki/Participatiewet
 
+# vernietigingskamo
+https://en.m.wiktionary.org/wiki/vernietigingskamp
+
+# nederland
+https://nl.wikipedia.org/wiki/Nederland
+
 bemoeigurus at work © 2002-2021
